--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><%= 2+2 %></h1>
+    <form action="/check">
+        <input type="text" placeholder="name" name="name">
+        <input type="email" placeholder="email" name="email">
+        <input type="submit">
+    </form>
 </body>
 </html>
