--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/check">
+    <!-- <form action="/check">
         <input type="text" placeholder="name" name="name">
         <input type="email" placeholder="email" name="email">
         <input type="submit">
+    </form> -->
+
+    <form action="/check" method="post">
+        <input type="text" placeholder="name" name="name">
+        <input type="email" placeholder="email" name="email">
+        <input type="password" placeholder="password" name="password">
+        <input type="submit">
     </form>
+    
 </body>
 </html>
